[Add] hotCarousel data get method

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -157,12 +157,12 @@
 
                                     const className = `transformX__${idx}`;
                                 %>
-                                <li class=<%=className%> >
+                                <li class= <%=className%> id= <%= i %> >
                                     <a>
-                                        <img src="/images/itemsample2.jfif" />
+                                        <img />
                                         <div>
-                                            <span class="txt-bold">테스트<%= i+1 %></span>
-                                            <span class="txt-info">테스트<%= i+1 %></span>
+                                            <span class="txt-bold"></span>
+                                            <span class="txt-info"></span>
                                             <span class="i-theme"></span>
                                         </div>
                                     </a>
