feat : json 데이터로 캐러셀 이미지 띄우기 추가

--- a/views/index.html
+++ b/views/index.html
@@ -62,27 +62,29 @@
             />
           </div>
           <div class="section-top__item">
-            <div class="item__carousel-wrap">
+            <div class="item__carousel-box">
               <!-- 여기서 부터 캐러셀 -->
-              <div class="carousel-content" >
-                <a href="#"">
-                  <img
-                    src="//shop3.daumcdn.net/shophow/sib/0_210219175737_rZKhKlFtOPfWeMUVyowhqtRvzJJOintZ"
-                /></a>
-              </div>
-              <div class="carousel-content">
-                <a href="#">
-                  <img
-                    src="//shop2.daumcdn.net/shophow/sib/0_210219175824_lTVZxKLcBxDipjZVpYbrzginiMwRizAO"
-                  />
-                </a>
-              </div>
-              <div class="carousel-content">
-                <a href="#">
-                  <img
-                    src="//shop1.daumcdn.net/shophow/sib/0_210219175816_BLrjXAFKSXpUoiPzkxzQFtLjJkHixbZX"
-                  />
-                </a>
+              <div class="item__carousel-wrap">
+                <!-- <div class="carousel-content">
+                  <a href="#"" >
+                    <img
+                      src="//shop3.daumcdn.net/shophow/sib/0_210219175737_rZKhKlFtOPfWeMUVyowhqtRvzJJOintZ"
+                  /></a>
+                </div>
+                <div class="carousel-content">
+                  <a href="#">
+                    <img
+                      src="//shop2.daumcdn.net/shophow/sib/0_210219175824_lTVZxKLcBxDipjZVpYbrzginiMwRizAO"
+                    />
+                  </a>
+                </div>
+                <div class="carousel-content">
+                  <a href="#">
+                    <img
+                      src="//shop1.daumcdn.net/shophow/sib/0_210219175816_BLrjXAFKSXpUoiPzkxzQFtLjJkHixbZX"
+                    />
+                  </a>
+                </div>       -->
               </div>
             </div>
 
@@ -107,6 +109,61 @@
             </div>
           </div>
 
+          <div class="section-top__item">
+            <div class="item__img-box-wrap">
+              <img
+                class="img-box"
+                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
+              />
+              <strong class="img-title">라바트 가구 기획전</strong>
+              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
+              <span class="img-icon">테마</span>
+            </div>
+          </div>
+          <div class="section-top__item">
+            <div class="item__img-box-wrap">
+              <img
+                class="img-box"
+                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
+              />
+              <strong class="img-title">라바트 가구 기획전</strong>
+              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
+              <span class="img-icon">테마</span>
+            </div>
+          </div>
+          <div class="section-top__item">
+            <div class="item__img-box-wrap">
+              <img
+                class="img-box"
+                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
+              />
+              <strong class="img-title">라바트 가구 기획전</strong>
+              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
+              <span class="img-icon">테마</span>
+            </div>
+          </div>
+          <div class="section-top__item">
+            <div class="item__img-box-wrap">
+              <img
+                class="img-box"
+                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
+              />
+              <strong class="img-title">라바트 가구 기획전</strong>
+              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
+              <span class="img-icon">테마</span>
+            </div>
+          </div>
+          <div class="section-top__item">
+            <div class="item__img-box-wrap">
+              <img
+                class="img-box"
+                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
+              />
+              <strong class="img-title">라바트 가구 기획전</strong>
+              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
+              <span class="img-icon">테마</span>
+            </div>
+          </div>
           <div class="section-top__item">
             <div class="item__img-box-wrap">
               <img
