--- a/public/stylesheets/main-top.scss
+++ b/public/stylesheets/main-top.scss
@@ -15,8 +15,8 @@ main {
 }
 .section-top__container {
   display: grid;
-  grid-template-rows: repeat(2, 340px); //340px높이 행 2개
-  grid-template-columns: repeat(5, 1fr); //1fraction의 비율로 5개의 칸
+  grid-template-rows: repeat(2, 340px);
+  grid-template-columns: repeat(5, 1fr);
   grid-auto-rows: 200px;
 }
 .item__img-box-wrap {
@@ -28,34 +28,30 @@ main {
 }
 
 .section-top__item:nth-child(1) {
-  grid-column: 1 / 3; //1번 박스를 1번에서 3이 있는 위치까지 늘린다
+  grid-column: 1 / 3;
 }
 
 .section-top__item:nth-child(2) {
-  grid-column: 3 / 6; //2번 박스를 3번에서 6이 있는 위치까지 늘린다
+  grid-column: 3 / 6;
 }
-.item__carousel-wrap {
+.item__carousel-box {
   margin: 0 124.5px;
-  width: 514px;
+  width: 485px;
   height: 340px;
-  text-align: center;
-  //overflow: hidden;
   position: relative;
+  overflow: hidden;
+
+  .item__carousel-wrap {
+    position: absolute;
+    display: flex;
+    text-align: center;
+    transform: translateX(-485px);
+  }
 
   .carousel-content {
-    position: absolute;
-    width: 514px;
-
-    /*가운데에서 시작*/
-    &:nth-child(1) {
-      transform: translate3d(0px, 0, 0);
-    }
-    &:nth-child(2) {
-      transform: translate3d(520px, 0, 0);
-    }
-    &:nth-child(3) {
-      transform: translate3d(-520px, 0, 0);
-    }
+    height: 340px;
+    width: 485px;
+    left: 100px;
   }
 }
 .panel-moving {
