[eamon]Shopping step3 (#86)
* [CHORE]Ignore css files

* [DOCS]Add morebutton

* [FEAT]make Morebtn class

* [FEAT]Add moreBtn 기능 구

--- a/shopping/public/stylesheets/main/main.css
+++ b/shopping/public/stylesheets/main/main.css
@@ -75,6 +75,7 @@
   transition-duration: 300ms;
   transform: translate3d(0px, 0px, 0px); }
 
-.transitionLeft {
-  transition-duration: 0ms;
-  transform: translate3d(0px, 0px, 0px); }
+.more_contents {
+  background-color: #ccc;
+  height: 54px;
+  width: 971px; }
