--- a/shopping/public/stylesheets/style.css
+++ b/shopping/public/stylesheets/style.css
@@ -34,7 +34,7 @@
 .shoppinglists {
   float: left;
   overflow: hidden;
-  width: 1275px;
+  width: 972px;
   background-color: #fff; }
 
 .shoppinglist {
@@ -231,9 +231,10 @@ header {
   transition-duration: 300ms;
   transform: translate3d(0px, 0px, 0px); }
 
-.transitionLeft {
-  transition-duration: 0ms;
-  transform: translate3d(0px, 0px, 0px); }
+.more_contents {
+  background-color: #ccc;
+  height: 54px;
+  width: 971px; }
 
 body {
   height: 500vh;
