--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 * {
-  font-size: 18px;
+  font-size: 16px;
   font-family: Arial, sans-serif;
   padding: 0;
   margin: 0;
@@ -12,46 +12,52 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 1200px;
   background-color: lavenderblush;
-  padding: 20px 300px;
-}
-.front .front__logo {
-  background-color: royalblue;
+  padding: 40px 300px;
 }
 .front .front__logo .logo__img {
-  height: 70px;
+  width: 119px;
 }
 .front .front__input-box {
   margin-left: 40px;
-  background-color: red;
-  display: flex;
-  justify-self: start;
 }
 .front .front__input-box .input-box__input {
   height: 50px;
-  width: 700px;
-  flex: 0 70%;
+  width: 650px;
 }
+.front .front__input-box input {
+  margin: 0 auto;
+  border: none;
+  /* <-- This thing here */
+  border: solid 1px #ccc;
+  border-radius: 10px;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
-  background-color: greenyellow;
   padding: 20px 40px;
+  min-width: 1200px;
 }
 nav .nav__category,
 nav .special-menu,
 nav .hash-tag,
 nav .add-on {
-  background-color: salmon;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+nav .hash-tag {
+  color: #888;
+  font-weight: 700;
 }
 nav .nav__category {
   flex-grow: 0.1;
 }
 nav .special-menu {
   flex-grow: 0.2;
+  font-weight: 700;
 }
 nav .hash-tag {
   flex-grow: 0.2;
@@ -70,25 +76,25 @@ nav .add-on .add-on__login li {
 }
 
 .main-banner {
-  background-color: rosybrown;
   position: relative;
-  padding: 0 80px;
   display: flex;
-  justify-self: center;
+  justify-content: center;
+  font-size: 0;
+  min-width: 1200px;
+}
+.main-banner a {
+  font-size: 0;
 }
 .main-banner .main-banner__static {
+  border: 1px solid #ccc;
   background-color: yellow;
-  position: absolute;
-  left: 10%;
-  display: inline-block;
+}
+.main-banner img {
+  display: block;
 }
 .main-banner .main-banner__slide {
-  background-color: red;
-  padding: 0 60px;
-  height: 340px;
+  border: 1px solid #ccc;
   width: 685px;
-  margin-left: 500px;
-  left: 4%;
   overflow: hidden;
   position: relative;
 }
@@ -96,7 +102,6 @@ nav .add-on .add-on__login li {
   display: flex;
   position: absolute;
   justify-content: flex-start;
-  background-color: greenyellow;
   left: -585px;
 }
 .main-banner .main-banner__slide .slide-bundle li {
