[Slider] 한칸씩 이동 오작동 / insert before 로 하려면 구조를 바꿔야하거나 다른 방법을 찾아봐야 할 것 같다.

--- a/raccoon-shopping-express/front/style.scss
+++ b/raccoon-shopping-express/front/style.scss
@@ -609,7 +609,6 @@ section {
           #mall__event--slide {
             width: 1280px;
 
-            // 여기도 동적 할당
             .slide {
               position: relative;
               top: 0px;
@@ -617,6 +616,17 @@ section {
               // 여기 이상하게 틀어짐
               left: -1287px;
               width: 3849px;
+
+              &--click--prev {
+                @extend .slide;
+                transform: translate3d(255px, 0px, 0px);
+                transition-duration: 300ms;
+              }
+              &--click--next {
+                @extend .slide;
+                transform: translate3d(-255px, 0px, 0px);
+                transition-duration: 300ms;
+              }
               .panel {
                 height: 100%;
                 overflow: hidden;
