Feat: add translate click event on small carousel
- Add click event of translateX on slide.
- Change path settings as a consequence of changing folder names(CSS, JS).

--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>쇼핑하우</title>
-    <link rel='stylesheet' href='/stylesheets/normalize.css'/>
-    <link rel='stylesheet' href='/stylesheets/reset.css'/>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/CSS/normalize.css'/>
+    <link rel='stylesheet' href='/CSS/reset.css'/>
+    <link rel='stylesheet' href='/CSS/style.css' />
   </head>
   <body>
     <%#header.scss%>
@@ -104,6 +104,6 @@
       </div>
       <div class="footer"></div>
     </section>
-    <script type="module" src="/javascripts/index.js"></script>
+    <script type="module" src="/JS/index.js"></script>
   </body>
 </html>
