--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -59,6 +59,7 @@
           <%#img src="/images/main-1.png" alt="main image1"%>
         </div>
         <div class="cell upper-half__right">
+        <%#여기서부터 미니캐러셀%>
           <div class="carousel1">
             <div class="carousel__btn-container">
               <button type="button" class="btn_prev" title="이전">
