--- a/src/scss/var.scss
+++ b/src/scss/var.scss
@@ -1,4 +1,6 @@
 $body-sect-cnt: 3;
+$min-item-cnt: 3;
+$max-item-cnt: 5;
 
 $main-evt-img-w: 485px;
 $main-evt-img-h: 340px;
@@ -6,6 +8,8 @@ $main-evt-page-cnt: 3;
 
 $evt-card-item-img-w: 200px;
 $evt-card-item-img-h: 200px;
+
+$hotdeal-card-item-cnt: 10;
 
 $ic-url: url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_190702.png);
 $ic-url2: url(https://shop1.daumcdn.net/search/cdn/simage/shopping/img/ico_comm2_150514.gif);
