Fix : 슬라이더 js 코드 클래스 문법으로 리팩토링

--- a/shopping/views/main.ejs
+++ b/shopping/views/main.ejs
@@ -118,7 +118,7 @@
     </section>
     <script src="/javascripts/header.js"></script>
     <script src="/javascripts/best.js"></script>
-    <script src="/javascripts/bigSlide.js"></script>
+    <script src="/javascripts/slide.js"></script>
     <script src="/javascripts/itemList.js"></script>
 </body>
 
