--- a/shopping/public/stylesheets/main/articleKeyword.scss
+++ b/shopping/public/stylesheets/main/articleKeyword.scss
@@ -1,12 +1,7 @@
 .article__keyword {
-  ul {
-    // border: 1px solid red;
-
-    li {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-    }
+  .content_item {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
