--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -55,9 +55,7 @@
     </header>
     <section class="main">
       <div class="grid_container">
-        <div class="cell upper-half__left">
-          <%#img src="/images/main-1.png" alt="main image1"%>
-        </div>
+        <div class="cell upper-half__left"></div>
         <div class="cell upper-half__right">
         <%#여기서부터 미니캐러셀%>
           <div class="carousel1">
@@ -68,7 +66,6 @@
             </div>
             <div class="slide-window">
               <ul class="slide">
-                
               </ul>
             </div>
             <div class="carousel__btn-container">
@@ -78,12 +75,12 @@
             </div>
           </div>
         </div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell">
+        <div class="cell cell-bottom"></div>
+        <div class="cell cell-bottom"></div>
+        <div class="cell cell-bottom"></div>
+        <div class="cell cell-bottom"></div>
+        <div class="cell cell-bottom"></div>
+        <div class="cell container_btn_more">
           <button class="btn_more_info">더보기(1 / n건)</button>
         </div>
       </div>
